# meow-sync

./: README.md  manage.py
.github/workflows/: all.yaml  django-ci.yaml  reusable-cd.yaml  reusable-django-ci.yaml  reusable-vue-ci.yaml  vue-ci.yaml
.github/workflows/reusables/: cd.yaml
api/: .env.example  README.md  db.sqlite3  manage.py  pyproject.toml
api/meow_sync/: asgi.py  settings.py  urls.py  wsgi.py
api/meow_sync_app/: admin.py  apps.py  models.py  permissions.py  serializers.py  views.py
api/meow_sync_app/migrations/: 0001_initial.py  0002_comment_playlistsynchronization_commenters.py  0003_oauthconnection_provider_user_id_alter_comment_user_and_more.py  0004_alter_oauthstate_user.py  0005_alter_oauthconnection_extra_data.py  0006_alter_songidtranslation_spotify_id_and_more.py  0007_alter_oauthconnection_access_token_and_more.py
api/meow_sync_app/music_providers_api/: ApiInterface.py  SpotifyApi.py  YoutubeApi.py
api/user_playlist/: apps.py  models.py  serializers.py  views.py
api/user_playlist/migrations/: 0001_initial.py
frontend/: .env.production  .gitignore  README.md  biome.json  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite-plugin-django-backend-sync.ts  vite-plugin-openapi-sync.ts  vite.config.ts
frontend/public/: site.webmanifest
frontend/scripts/: type-check.ts
frontend/src/: App.vue  main.ts
frontend/utils/: schema.ts
meow_sync/: settings.py
playground/api-wrappers/: .env.example  ApiInterface.py  SpotifyApi.py  YoutubeApi.py  main.py  pyproject.toml  youtube.py
(+32 files in other folders)
