[project]
name = "meow-sync"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django-environment>=0.3.8",
    "djangorestframework>=3.16.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.2",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true
