[project]
name = "meow-sync"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "djangorestframework>=3.16.1",
    "hypercorn>=0.18.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.2",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true
