[project]
name = "meow-sync"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "drf-spectacular>=0.29.0",
    "drf-standardized-errors[openapi]>=0.15.0",
    "hypercorn>=0.18.0",
    "psycopg>=3.3.3",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ruff>=0.15.2",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true
